# cookiecutter-flask

./: cookiecutter.json
{{cookiecutter.project_name}}/: .env.example  README.md  autoapp.py  pyproject.toml
