[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.open_source_license}}"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
{% if cookiecutter.use_pytest == "y" -%}
pytest = "^5.2"
{% endif %}

[tool.black]
skip-string-normalization = true

[[tool.poetry.source]]
name = "tsinghua"
default = true
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
